# openvino-rust-cpp

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
cpp/: CMakeLists.txt
cpp/ffi/: CMakeLists.txt  bridge.cpp
cpp/include/openvino_vision/: action_detector.hpp  cnn.hpp  detector.hpp  face_reid.hpp  logger.hpp  tracker.hpp
cpp/include/openvino_vision/common/: kuhn_munkres.hpp  ocv_common.hpp  openvino_utils.hpp  performance_metrics.hpp
cpp/include/openvino_vision/ffi/: bridge.hpp
cpp/include/ovi/core/: images_capture.hpp  openvino_utils.hpp  slog.hpp
cpp/include/ovi/vision/: action_detector.hpp  cnn.hpp  detector.hpp  face_reid.hpp  logger.hpp  tracker.hpp
cpp/include/ovi/vision/ffi/: bridge.hpp
cpp/src/: action_detector.cpp  align_transform.cpp  cnn.cpp  detector.cpp  images_capture.cpp  logger.cpp  reid_gallery.cpp  tracker.cpp
crates/openvino-vision/: Cargo.toml
crates/openvino-vision-sys/: Cargo.toml  build.rs
crates/openvino-vision-sys/src/: lib.rs
crates/openvino-vision/src/: deprecated.rs  detector.rs  error.rs  landmarks.rs  lib.rs  model.rs  output.rs  reid.rs  tracker.rs  video.rs
crates/ovi-vision/: Cargo.toml
crates/ovi-vision-sys/: Cargo.toml  build.rs
crates/ovi-vision-sys/src/: lib.rs
crates/ovi-vision/src/: detector.rs  embedder.rs  error.rs  landmarks.rs  lib.rs  output.rs  reid.rs  tracker.rs  video.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  event.rs  examples.rs  main.rs  parser.rs  task.rs  ui.rs
crates/tui/src/ui/: config.rs  dashboard.rs  menu.rs
docs/: architecture-plan.md  audio-domain-plan.md  development-roadmap.md  features.md
examples/example_action_detection/: Cargo.toml
examples/example_action_detection/src/: main.rs
examples/example_face_detection/: Cargo.toml
examples/example_face_detection/src/: main.rs
examples/example_face_reid/: Cargo.toml
examples/example_face_reid/src/: main.rs
examples/example_tracking/: Cargo.toml
examples/example_tracking/src/: main.rs
examples/smart_classroom/: CMakeLists.txt  main.cpp
examples/smart_classroom_rs/: Cargo.toml
examples/smart_classroom_rs/src/: main.rs
tools/action_event_metrics/: Cargo.toml
tools/action_event_metrics/src/: main.rs
tools/create_gallery/: Cargo.toml
tools/create_gallery/src/: main.rs
