[package]
name = "openvino-vision-sys"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Raw CXX FFI bindings to the openvino_vision C++ library"
keywords = ["openvino", "ffi", "computer-vision", "inference"]
categories = ["external-ffi-bindings", "computer-vision"]

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
cmake = "0.1"
