[package]
name = "openvino-vision-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "openvino-vision-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
regex = "1"
